  - Fix: info command crash (triggered on NetBSD)
  - Fix: disassember output bug on NetBSD (usigned char < -1 test)
  - Fix: info osheader and basebase subcommands under MiNT
  - Fix: debugger history duplicates removal
  - Fix: expression expanding CPU "pc" for DSP shortcut commands
  - Fix: expression expansion messing lines in command line history
  - Remote API debugger commands can also use expression expansion
  - Both single and double quotes can be used to mark expressions
  - In addition to text section offset, data and bss section offsets
    can be given when loading symbols (useful for Devpac symbols)
  - output what value was set by options if it's not otherwise shown by UI
  - Show function arguments for GEMDOS Pexec() call and AES calls
    (for AES call values in intin array and strings in addrin array)
  - support for the basic Native Features and --natfeats option to control it:
    http://wiki.aranym.org/natfeats/proposal

Windows specific changes:
- "-W" option added for opening a console window.  Like on all other platforms,
  "-D" will now just toggle CPU exception handling
- Fix: console stderr redirection fixed (used invalid "wr" mode)
- Fix: Windows localtime() not supporting dates before 1970 causes IKBD
  emulation crashes (not a problem with Cygwin, just Mingw)

Other changes:
- HTML documentation indeces generated dynamically with JS
- Debugger tests building fixed
- Added scripts for converting symbol tables in Devpac 3 listings and DSP LOD
  files to a format understood by Hatari debugger 'symbols' command,
  and to clean 'nm' output of GCC & VBCC built a.out binaries for it

Fixed Games:
- Captain Blood (IKBD, fixed problem when setting the clock)
- Fokker and Downfall (ACIA/IKBD, had regressed in Hatari v1.6.x)


 Version 1.6.2 (2012-06-24):
 ---------------------------

Emulation:
- ST video changes :
  - Fixes a rare potential crash when running in color mode and switching